--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Practice.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMHW5CHKIhgDxzFQUHKQ8Ud",
+      "authorship_tag": "ABX9TyOH50O6JIing39A2i/J/vvM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -208,9 +208,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 272
+          "height": 147
         },
-        "outputId": "a2b46d90-9066-4261-f330-c84fcaaf7364"
+        "outputId": "22fa271d-c758-4f1a-df69-ec883a1e80d8"
       },
       "source": [
         "n = int(input())\n",
@@ -221,7 +221,6 @@
         "    lst1 = str(input(\"Enter name of student: \"))\n",
         "    lst2 = float(input(\"Enter marks of student: \"))\n",
         "    lst.append([lst1, lst2])\n",
-        "    lst1.append[\"(lst1)\"]\n",
         "print (lst)\n",
         "for x in range(1, n):\n",
         "    if(lst[x][1] != lst[x-1][1]):\n",
@@ -233,27 +232,21 @@
         "    if(lst[x][1] == score):\n",
         "        print (lst[x][0])"
       ],
-      "execution_count": 48,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "2\n",
-            "Enter name of student: 2\n",
-            "Enter marks of student: 2\n"
+            "Enter name of student: 12\n",
+            "Enter marks of student: 12\n",
+            "Enter name of student: 23\n",
+            "Enter marks of student: 23\n",
+            "[['12', 12.0], ['23', 23.0]]\n",
+            "23.0\n",
+            "23\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-48-ebe5f808892d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mlst2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter marks of student: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mlst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlst1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlst2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mlst1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"(lst1)\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'append'"
-          ]
         }
       ]
     },
@@ -316,6 +309,64 @@
           "output_type": "stream",
           "text": [
             "['a', 'b', 'c', 'd']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "26HZ_An_Z5XZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 212
+        },
+        "outputId": "9f9f4b4d-3c85-4161-837f-52e8cb48f637"
+      },
+      "source": [
+        "l1=[]\n",
+        "score_list=[]\n",
+        "n= int(input(\"enter a no: \"))\n",
+        "for i in range(0,n):\n",
+        "  name = input()\n",
+        "  score=float(input())\n",
+        "  l1.append([name,score])\n",
+        "  score_list.append(score)\n",
+        "score_list.sort()\n",
+        "score_list=list(set(score_list))\n",
+        "score_list.sort()\n",
+        "second_lowest=score_list[1]\n",
+        "\n",
+        "name=[]\n",
+        "for i in l1:\n",
+        "  try:\n",
+        "    indx=i.index(second_lowest)\n",
+        "    name.append(i[0])\n",
+        "  except:\n",
+        "    pass\n",
+        "name.sort()\n",
+        "for i in name:\n",
+        "  print(i)\n"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "enter a no: 5\n",
+            "ab\n",
+            "23\n",
+            "bc\n",
+            "23\n",
+            "dc\n",
+            "34\n",
+            "rf\n",
+            "45\n",
+            "er\n",
+            "47\n",
+            "dc\n"
           ],
           "name": "stdout"
         }
